ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Order_Confirmation_Email_Addtl__c/B2B_Order_Confirmation_Email_Addtl__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>additional email addresses added as recipients for order confirmation email</description>
    <label>B2B_Order_Confirmation_Email_Addtl</label>
</CustomObject>