ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Order_Confirmation_Email_Addtl__c/fields/Addtl_Recipient_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Addtl_Recipient_Email_Address__c</fullName>
    <description>Additional email address added as a recipient to order confirmation email</description>
    <inlineHelpText>Additional email address added as a recipient to order confirmation email</inlineHelpText>
    <label>Addtl Recipient Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>