ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Order_Confirmation_Email_Addtl__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>If Currency Code on order matches this value, addtl email will be added to recipients</description>
    <inlineHelpText>If Currency Code on order matches this value, addtl email will be added to recipients</inlineHelpText>
    <label>Currency Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>