ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Order_Confirmation_Email_Addtl__c/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <inlineHelpText>Organization-Wide Addresses</inlineHelpText>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>