ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Order_Confirmation_Email_Addtl__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Addtl_Recipient_Email_Address__c</columns>
    <columns>Sender_Email__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>